[package]
name = "program2_drc"
version = "0.1.0"
authors = ["Joseph O'Neill <oneillj1@g.cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"